# template-jobs-py

./: .gitignore  README.md  blaxel.toml  pyproject.toml
batches/: sample-batch.json
src/: main.py
src/steps/: step1.py  step2.py  step3.py
