[project]
name = "template-job-py"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["blaxel[core,telemetry]==0.2.10"]
[dependency-groups]
dev = ["ruff>=0.8.2"]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]
